# cloud_services

./: .coveragerc  .dockerignore  .gitignore  Dockerfile  README.md  config.py  constants.py  dev.Dockerfile  dev.env  docker-compose.yaml  docker.env  manage.py  pyproject.toml  pytest.ini  test.env
api/: admin.py  api.py  api_auth.py  schemas.py  tasks.py
api/migrations/: 0001_initial.py  0002_alter_dish_time_to_cook.py  0003_card.py  0004_alter_card_dishes.py  0005_auto_20210912_1406.py  0006_dish_image.py  0007_auto_20210912_1524.py
api/models/: abc.py  cards.py  custom_fields.py  dishes.py
api/views/: __init__.py  cards.py  cards_management.py  dishes.py  views_utils.py
api/views/crud/: cards.py  dishes.py
api/views/public/: menu.py
cloud_services/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
rediska/: __init__.py  redict.py
tests/: __init__.py  conftest.py  testing_utils.py
tests/api/: auth_tests.py  test_data.py
tests/api/tasks/: email_tasks_tests.py
tests/api/views/: get_tests.py
tests/api/views/crud/cards/: create_tests.py  delete_tests.py  update_tests.py
tests/api/views/crud/cards_management/: add_tests.py  remove_tests.py
tests/api/views/crud/dishes/: create_tests.py  delete_tests.py  image_tests.py  update_tests.py
tests/api/views/public/: menu_tests.py
tests/api_tests/: cards_management_tests.py  cards_tests.py  dishes_tests.py  get_tests.py  menu_tests.py  tasks_tests.py
utils/: containers.py  serialization.py
