[tool.poetry]
name = "cloud_services"
version = "0.1.0"
description = ""
authors = ["Oleksandr Kudryavtsev <14zsoddenu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
